# qt-quick-weather-app

./: .gitignore  CMakeLists.txt  README.md
src/: CurrentLocationWeatherOutputLayout.qml  CurrentWeatherButton.qml  CurrentWeatherInputLayout.qml  CurrentWeatherOutputLayout.qml  ErrorUserFeedbackTextArea.qml  GPSComponent.qml  HamburgerMenu.qml  OverlayHeader.qml  RefreshWeatherButton.qml  ResetWeatherButton.qml  ScaleProperties.qml  WeatherOutputLayout.qml  main.cpp  main.qml  qml.qrc
src/backend/: ApiKey.hpp.in  BuildType.hpp.in  GPSCoordinates.hpp  WeatherApiConstants.hpp  WeatherApiHandler.cpp  WeatherApiHandler.hpp  WeatherApiResponseData.cpp  WeatherApiResponseData.hpp  WebApiHandler.cpp  WebApiHandler.hpp
src/qtquick/: QWeatherApiHandler.cpp  QWeatherApiHandler.hpp  QWebApiHandler.cpp  QWebApiHandler.hpp
src/utils/shared_enums/: TemperatureScale.hpp  TemperatureType.hpp
